--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "ncc build index.js -o dist --source-map"
+    "prepublishOnly": "ncc build index.js -o dist --source-map"
   },
   "repository": {
     "type": "git",
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/BardOve/actions#readme",
   "dependencies": {
-    "@esphen/github-core": "^1.9.0",
+    "@esphen/github-core": "^1.9.1-alpha.1",
     "axios": "^0.27.2",
     "https": "^1.0.0"
   },
